--- a/_posts/2018-08-22-second.md
+++ b/_posts/2018-08-22-second.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: First Post
+title: Second Post
 categories:
-  - General
-feature_image: "https://picsum.photos/2560/600?image=872"
+  - Tech
+feature_image: "https://picsum.photos/2560/600?image=852"
 ---
 
 This is my very first blog post. I haven't written anything yet but I'm sure I have some great stories to tell.
